# drugquery-rag

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
data/evaluation/: .gitkeep
data/processed/: .gitkeep
data/raw/: .gitkeep
src/drugquery/: __init__.py  cli.py  config.py  logging.py
src/drugquery/api/: __init__.py
src/drugquery/evaluation/: __init__.py
src/drugquery/generation/: __init__.py
src/drugquery/ingestion/: __init__.py  chunk.py  download.py  parse.py
src/drugquery/retrieval/: __init__.py  pipeline.py  query.py  rerank.py
src/drugquery/vectorstore/: __init__.py  client.py  embeddings.py  schema.py
streamlit_app/: app.py
tests/: __init__.py  conftest.py  test_config.py
