[project]
name = "drugquery-rag"
version = "0.1.0"
description = "Production-grade RAG system for FDA drug label Q&A"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Yvette Gonzalez", email = "ygonzalez704@gmail.com" }
]
keywords = ["rag", "llm", "healthcare", "fda", "drug-information"]

dependencies = [
    # Core LLM
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.0",
    
    # Vector Store
    "weaviate-client>=4.9.0",
    
    # Embeddings & Reranking
    "sentence-transformers>=3.3.0",
    
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    
    # Data Processing
    "lxml>=5.3.0",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.12.0",
    
    # Observability
    "langsmith>=0.2.0",
    
    # Evaluation
    "ragas>=0.2.0",
    "datasets>=3.1.0",
    
    # Frontend
    "streamlit>=1.40.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.4.0",
    "tiktoken>=0.8.0",
    "rich>=13.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.1.0",
]

[project.scripts]
drugquery = "drugquery.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/drugquery"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B017",   # pytest.raises without match
]

[tool.ruff.lint.isort]
known-first-party = ["drugquery"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
